--- a/.travis.yml
+++ b/.travis.yml
@@ -6,13 +6,15 @@ env:
 
 before_install:
   - yes | sudo add-apt-repository ppa:hansjorg/rust
+  - yes | sudo add-apt-repository ppa:cmrx64/cargo
   - sudo apt-get update
 
 install:
   - sudo apt-get install rust-nightly
+  - sudo apt-get install cargo
 
 script:
-  - make doc && make tests
+  - cargo test && make doc
 
 after_script:
   - curl http://www.rust-ci.org/artifacts/put?t=$RUSTCI_TOKEN | sh
