--- a/.travis.yml
+++ b/.travis.yml
@@ -8,4 +8,4 @@ script:
     - cargo test --verbose && cargo doc --verbose --no-deps
 
 after_script:
-  - cd target && curl http://www.rust-ci.org/artifacts/put?t=$RUSTCI_TOKEN | sh
+  - cd target && (curl http://www.rust-ci.org/artifacts/put?t=$RUSTCI_TOKEN | sh)
