--- a/Cargo.toml
+++ b/Cargo.toml
@@ -5,9 +5,9 @@ authors = ["Valerii Hiora <valerii.hiora@gmail.com>"]
 license = "MIT"
 description = "LMDB bindings"
 repository = "https://github.com/vhbit/lmdb-rs"
-documentation = "https://vhbit.github.io/doc/lmdb"
+documentation = "https://vhbit.github.io/lmdb-rs/lmdb-rs"
 readme = "README.md"
-keywords = ["lmdb", "db", "bindings"]
+keywords = ["lmdb", "db", "bindings", "key-value", "key value", "storage"]
 
 [dependencies.liblmdb-sys]
 path = "liblmdb-sys"
