--- a/Cargo.toml
+++ b/Cargo.toml
@@ -7,7 +7,7 @@ description = "LMDB bindings"
 repository = "https://github.com/vhbit/lmdb-rs"
 documentation = "https://vhbit.github.io/lmdb-rs/lmdb-rs"
 readme = "README.md"
-keywords = ["lmdb", "db", "bindings", "key-value", "storage", "kvs", "kv"]
+keywords = ["lmdb", "db", "key-value", "kvs", "kv"]
 
 [dependencies.liblmdb-sys]
 path = "liblmdb-sys"
