--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lmdb-rs"
-version = "0.1.5"
+version = "0.1.6"
 authors = ["Valerii Hiora <valerii.hiora@gmail.com>"]
 license = "MIT"
 description = "LMDB bindings"
@@ -14,4 +14,5 @@ path = "liblmdb-sys"
 version = "*"
 
 [dependencies]
-log = "0.1.6"
+log = "0.1.0"
+bitflags = "0.1.0"
