--- a/Cargo.toml
+++ b/Cargo.toml
@@ -11,8 +11,7 @@ keywords = ["lmdb", "db", "key-value", "kvs", "kv"]
 
 [dependencies.liblmdb-sys]
 path = "liblmdb-sys"
-version = "*"
 
 [dependencies]
-log = "0.1.0"
-bitflags = "0.1.0"
+regex = "= 0.1.10"
+bitflags = "= 0.1.0"
