Updated to nightly, bumped version

--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "lmdb-rs"
-version = "0.1.6"
+version = "0.1.7"
 authors = ["Valerii Hiora <valerii.hiora@gmail.com>"]
 license = "MIT"
 description = "LMDB bindings"
@@ -11,7 +11,9 @@ keywords = ["lmdb", "db", "key-value", "kvs", "kv"]
 
 [dependencies.liblmdb-sys]
 path = "liblmdb-sys"
+version = "0.0.5"
 
 [dependencies]
-regex = "= 0.1.10"
-bitflags = "= 0.1.0"
+log = "0.2"
+regex = "0.1.10"
+bitflags = "0.1.1"
