--- a/liblmdb-sys/Cargo.toml
+++ b/liblmdb-sys/Cargo.toml
@@ -1,6 +1,6 @@
 [package]
 name = "liblmdb-sys"
-version = "0.0.7"
+version = "0.1.0"
 authors = ["Valerii Hiora <valerii.hiora@gmail.com>"]
 links = "lmdb"
 license = "MIT"
@@ -9,5 +9,5 @@ repository = "https://github.com/vhbit/lmdb-rs"
 build = "build.rs"
 
 [lib]
-    name = "liblmdb-sys"
+    name = "liblmdb_sys"
     path = "lib.rs"
