--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "liblmdb-sys/mdb"]
 	path = liblmdb-sys/mdb
-	url = https://git.gitorious.org/mdb/mdb.git
+	url = https://github.com/LMDB/lmdb.git
