--- a/liblmdb-sys/Cargo.toml
+++ b/liblmdb-sys/Cargo.toml
@@ -7,8 +7,10 @@ license = "MIT"
 description = "LMDB native lib"
 repository = "https://github.com/vhbit/lmdb-rs"
 build = "build.rs"
+edition = "2018"
 
 [dependencies]
 libc = "0.2"
+
 [build-dependencies]
 cc = "1.0"
